# scarab

./: .gitignore  .gitmodules
src/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  addr_trans.c  build.sh  cmake_install.cmake  cmp_model.c  cmp_model.h  cmp_model_support.c  compile_commands.json  core.param.def  core.stat.def  ctype_pin_inst.h  dcache_stage.c  dcache_stage.h  dumb_model.c  exec_ports.c  exec_ports.h  exec_stage.c  exec_stage.h  freq.c  general.param.def  icache_stage.c  icache_stage.h  inst.stat.def  main.c  map.c  map_stage.c  model.h  node_stage.c  node_stage.h  op.h  op_info.h  op_pool.c  optimizer2.c  packet_build.h  param_files.def  param_parser.c  (+10 more)
src/bp/: bp.c  bp.h  bp_conf.c  bp_targ_mech.c  cbp_to_scarab.cc  decoupled_bp.cc  decoupled_bp.h  hybridgp.cc  mtage_unlimited.cc  mtage_unlimited.h
src/bp/template_lib/: statistical_corrector.h  tage.h
src/configs/: BINDINGS.lnc.xlsx  PARAMS.lnc  PARAMS.lnc.exec2X  PARAMS.lnc.execFP2X  PARAMS.lnc.monolithic_exec  PARAMS.lnc.nonrestricted_fu  PARAMS.lnc.nonrestricted_fu_rs
src/debug/: debug_print.h  memview.h
src/dvfs/: dvfs.c  perf_pred.c
src/frontend/: frontend.c  frontend_intf.c  frontend_intf.h  pin_exec_driven_fe.cc  pin_trace_fe.c  pin_trace_read.cc
src/frontend/memtrace/: memtrace_fe.cc  memtrace_trace_reader.cc  memtrace_trace_reader_memtrace.cc  memtrace_trace_reader_memtrace.h
src/globals/: assert.h  enum.h  param_enum_headers.h  utils.c  utils.h
src/isa/: isa.c  isa_macros.h
src/libs/: cache_lib.c  hash_lib.c  malloc_lib.c
src/memory/: cache_part.c  mem_req.h  memory.c  memory.h
src/pin/pin_exec/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pin_exec.cpp  read_mem_map.h  utils.h
src/pin/pin_exec/testing/: CMakeCache.txt  Makefile  cmake_install.cmake
src/pin/pin_lib/: Makefile  cmake_install.cmake  decoder.cc  decoder.h  gather_scatter_addresses.h  message_queue_interface_lib.cc  message_queue_interface_lib.h  pin_api_to_xed.h  uop_generator.c  x86_decoder.cc  x87_stack_delta.cc
src/pin/pin_trace/: gen_trace_with_controller.cc  gen_trace_with_magic.cc.bak
src/power/: power_intf.c  power_scarab_config.cc
src/prefetcher/: l2markv_pref.c  l2way_pref.c  pref_common.c  pref_stream.c  pref_stride.c  pref_stridepc.c  stream_pref.c
src/ramulator2/: Makefile  cmake_install.cmake  example_config.yaml
src/ramulator2/src/: Makefile  cmake_install.cmake  main.cpp
src/ramulator2/src/base/: Makefile  (+11 more)
src/test/: server_client_socket_test.cc
src/vp/: last_val.c  last_val.h  novp.c  novp.h  vp.c  vp.h  vp.param.def  vp.param.h  vp.stat.def  vp_table.def
(+40 files in other folders)
